--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Auth Cloud SDK
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '${{ secrets.DEV_GCP_SA_KEY }}'
+          credentials_json: '${{ secrets.DEV_SERVICE_ACCOUNT_KEY }}'
 
       - name: Deploy Image to Google Container Registry
         run: |
