--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "sharp": "^0.31.3",
     "swiper": "^8.4.5",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-gtm-module": "^2.0.1"
   }
 }
