--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "sharp": "^0.31.3",
+    "swiper": "^8.4.5",
     "typescript": "4.9.4"
   },
   "devDependencies": {
