--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "amplitude-js": "^8.21.4",
     "axios": "^1.2.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
@@ -26,6 +27,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/amplitude-js": "^8.16.2",
     "@types/react-gtm-module": "^2.0.1"
   }
 }
