--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-shimmer-effects": "^1.0.2",
     "sharp": "^0.31.3",
     "swiper": "^8.4.5",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "vanilla-lazyload": "^17.8.3"
   },
   "devDependencies": {
     "@types/amplitude-js": "^8.16.2",
