--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react-gtm-module": "^2.0.1",
     "amplitude-js": "^8.21.4",
     "axios": "^1.2.3",
     "eslint": "8.31.0",
@@ -22,6 +23,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-shimmer-effects": "^1.0.2",
     "sharp": "^0.31.3",
     "swiper": "^8.4.5",
