--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-shimmer-effects": "^1.0.2",
+    "seva-ui-kit": "^0.0.1",
     "sharp": "^0.31.3",
     "swiper": "^8.4.5",
     "typescript": "4.9.4",
