--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "export": "next build && next export"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
     "@next/font": "^13.1.1",
     "@types/crypto-js": "^4.1.1",
@@ -24,6 +27,7 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "firebase": "8.6.2",
     "fuse.js": "^6.6.2",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
@@ -39,6 +43,7 @@
     "scss": "^0.2.4",
     "seva-ui-kit": "^0.0.1",
     "sharp": "^0.31.3",
+    "styled-components": "5.3.6",
     "swiper": "^8.4.5",
     "typescript": "4.9.4",
     "vanilla-lazyload": "^17.8.3"
