--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "18.11.18",
     "@types/react-dom": "18.0.10",
     "@types/react-gtm-module": "^2.0.1",
+    "@types/styled-components": "^5.1.9",
     "amplitude-js": "^8.21.4",
     "antd": "^5.6.3",
     "axios": "0.21.1",
@@ -32,6 +33,7 @@
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-cool-img": "^1.2.12",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-i18next": "^13.0.1",
