--- a/package.json
+++ b/package.json
@@ -32,15 +32,19 @@
     "fuse.js": "^6.6.2",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
+    "pannellum-react": "^1.2.4",
     "react": "18.2.0",
     "react-cool-img": "^1.2.12",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-i18next": "^13.0.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-responsive": "^9.0.2",
+    "react-responsive-carousel": "3.2.10",
     "react-shimmer-effects": "^1.0.2",
     "react-spring-bottom-sheet": "^3.5.0-alpha.0",
+    "react-tridi": "^2.1.0",
     "retry-axios": "2.4.0",
     "scss": "^0.2.4",
     "seva-ui-kit": "^0.0.1",
@@ -53,6 +57,7 @@
   "devDependencies": {
     "@types/amplitude-js": "^8.16.2",
     "@types/react": "^18.2.14",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "sass": "^1.58.3"
   }
 }
