--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "styled-components": "^5"
   },
   "dependencies": {
+    "@georgedrpg/pannellum-react-next": "^1.2.5",
     "@next/font": "^13.1.1",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "18.11.18",
@@ -25,6 +26,7 @@
     "axios-auth-refresh": "3.1.0",
     "clsx": "^1.2.1",
     "crypto-js": "^4.1.1",
+    "dompurify": "^2.3.6",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "eslint-plugin-unused-imports": "^2.0.0",
@@ -32,7 +34,7 @@
     "fuse.js": "^6.6.2",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
-    "pannellum-react": "^1.2.4",
+    "pure-react-carousel": "^1.27.6",
     "react": "18.2.0",
     "react-cool-img": "^1.2.12",
     "react-dom": "18.2.0",
