--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
     "pannellum-react": "^1.2.4",
-    "react-detect-click-outside": "^1.1.7",
     "pure-react-carousel": "^1.27.6",
     "react": "18.2.0",
     "react-cool-img": "^1.2.12",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-i18next": "^13.0.1",
@@ -54,7 +54,7 @@
     "scss": "^0.2.4",
     "seva-ui-kit": "^0.0.1",
     "sharp": "^0.31.3",
-    "styled-components": "5.3.6",
+    "styled-components": "^6.0.2",
     "swiper": "^8.4.5",
     "typescript": "4.9.4",
     "vanilla-lazyload": "^17.8.3"
