--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "scss": "^0.2.4",
     "seva-ui-kit": "^0.0.1",
     "sharp": "^0.31.3",
-    "styled-components": "^6.0.2",
+    "styled-components": "5.3.6",
     "swiper": "^8.4.5",
     "typescript": "4.9.4",
     "vanilla-lazyload": "^17.8.3"
