pdp desktop price-spec-gallery tab

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-shimmer-effects": "^1.0.2",
     "react-spring-bottom-sheet": "^3.5.0-alpha.0",
     "react-tridi": "^2.1.0",
+    "react-youtube": "^10.1.0",
     "retry-axios": "2.4.0",
     "scss": "^0.2.4",
     "seva-ui-kit": "^0.0.1",
