--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "8.6.2",
     "fuse.js": "^6.6.2",
+    "lodash.debounce": "^4.0.8",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
     "pure-react-carousel": "^1.27.6",
