--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.10",
     "@types/react-gtm-module": "^2.0.1",
     "@types/styled-components": "^5.1.9",
+    "@types/ua-parser-js": "^0.7.36",
     "amplitude-js": "^8.21.4",
     "antd": "^5.6.3",
     "axios": "0.21.1",
@@ -46,6 +47,7 @@
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "3.2.10",
     "react-shimmer-effects": "^1.0.2",
+    "react-slider": "^2.0.1",
     "react-spring-bottom-sheet": "^3.5.0-alpha.0",
     "react-tridi": "^2.1.0",
     "react-youtube": "^10.1.0",
@@ -56,12 +58,14 @@
     "styled-components": "5.3.6",
     "swiper": "^8.4.5",
     "typescript": "4.9.4",
+    "ua-parser-js": "^1.0.34",
     "vanilla-lazyload": "^17.8.3"
   },
   "devDependencies": {
     "@types/amplitude-js": "^8.16.2",
     "@types/react": "^18.2.14",
     "@types/react-lazy-load-image-component": "^1.5.2",
+    "@types/react-slider": "^1.3.1",
     "sass": "^1.58.3"
   }
 }
