--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^1.2.1",
     "crypto-js": "^4.1.1",
     "dompurify": "^2.3.6",
+    "entities": "^4.3.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "eslint-plugin-unused-imports": "^2.0.0",
