--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "firebase": "^8.6.2",
     "fuse.js": "^6.6.2",
+    "highlight-words-core": "^1.2.2",
     "lodash.debounce": "^4.0.8",
     "mobile-detect": "^1.4.5",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
     "pure-react-carousel": "^1.27.6",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-cool-img": "^1.2.12",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
@@ -48,6 +50,7 @@
     "react-i18next": "^13.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-lazy-load-image-component": "^1.5.1",
+    "react-moengage": "^1.1.0",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "3.2.10",
     "react-slider": "^2.0.1",
@@ -66,7 +69,9 @@
   },
   "devDependencies": {
     "@types/amplitude-js": "^8.16.2",
+    "@types/highlight-words-core": "^1.2.1",
     "@types/react": "^18.2.14",
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-slider": "^1.3.1",
     "sass": "^1.58.3"
