migrate profil pages and add alt on image tag

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/ua-parser-js": "^0.7.36",
     "amplitude-js": "^8.21.4",
     "antd": "^5.6.3",
+    "antd-mobile": "^5.32.0",
     "axios": "0.21.1",
     "axios-auth-refresh": "3.1.0",
     "clsx": "^1.2.1",
