--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -21,6 +21,10 @@ jobs:
           echo "CI=false" >> .env
           echo "PUBLIC_URL=${{ secrets.DEV_PUBLIC_URL }}" >> .env
           echo "NODE_ENV=development" >> .env
+          echo "NEXT_PUBLIC_LOCAL_STORAGE_ENCRYPTION_KEY=${{ secrets.LOCAL_STORAGE_ENCRYPTION_KEY }}" >> .env
+          echo "NEXT_PUBLIC_SERVER_BASE_URL=${{secrets.DEV_PUBLIC_URL}}" >> .env
+          echo "NEXT_PUBLIC_FIREBASE_API_KEY=${{secrets.DEV_REACT_FIREBASE_API_KEY}}" >> .env
+          echo "NEXT_PUBLIC_ENVIRONMENT=development" >> .env
 
       - name: Auth Cloud SDK
         uses: 'google-github-actions/auth@v0'
