--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mobile-detect": "^1.4.5",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
+    "plaiceholder": "^3.0.0",
     "pure-react-carousel": "^1.27.6",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
