--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "highlight-words-core": "^1.2.2",
     "lodash.debounce": "^4.0.8",
     "mobile-detect": "^1.4.5",
+    "moment": "^2.29.4",
     "next": "13.1.1",
     "next-pwa": "^5.6.0",
     "plaiceholder": "^3.0.0",
