--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "seva-next",
+  "sideEffects": false,
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -30,6 +31,7 @@
     "clsx": "^1.2.1",
     "countly-sdk-web": "^23.6.0",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.9",
     "dompurify": "^2.3.6",
     "entities": "^4.3.1",
     "eslint": "8.31.0",
