--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "seva-next",
   "sideEffects": false,
   "version": "0.1.0",
+  "sideEffects": false,
   "private": true,
   "scripts": {
     "dev": "next dev",
